--- a/ProjectDevs.Web/Views/Shared/Lists/_ProductionRelease.cshtml
+++ b/ProjectDevs.Web/Views/Shared/Lists/_ProductionRelease.cshtml
@@ -1,7 +1,8 @@
-﻿@model PartialModel
+@model PartialModel
 <table class="table table-striped table-bordered devs-table hidden" id="tbl_ProductionRelease_ReportTable" style="width:100%">
     <thead>
         <tr>
+            <td>Project</td>
             <td>Story ID</td>
             <td>As a</td>
             <td>I want to</td>
@@ -14,7 +15,7 @@
             <td>Request Date</td>
             <td>Start Date</td>
             <td>End Date</td>
-            
+
         </tr>
     </thead>
     <tbody>
@@ -24,6 +25,9 @@
 
 <table class="hide hidden" hidden id="production-release-report-list-table-template">
     <tr class="report-tr-wrapper">
+        <td>
+            <small t-projectname=""></small>
+        </td>
         <td>
             <small t-storyid=""></small>
         </td>
@@ -62,6 +66,7 @@
             <small t-enddate=""></small>
         </td>
 
-       
+
     </tr>
 </table>
+
